<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.submission1jetpack.ui.ui.detail.DetailContentActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:descendantFocusability="blocksDescendants"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_poster"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/color_primary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/iv_poster"
                app:layout_constraintTop_toTopOf="@id/iv_poster" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_title"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                tools:text="Spiderman" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_release_date"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_title"
                app:layout_constraintTop_toBottomOf="@id/txt_release"
                tools:text="06/01/2019" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_duration"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_release" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_title"
                app:layout_constraintTop_toBottomOf="@id/txt_duration"
                tools:text="22m" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_category"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_duration" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_title"
                app:layout_constraintTop_toBottomOf="@id/txt_category"
                tools:text="Movies" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_overview"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/iv_poster"
                app:layout_constraintTop_toBottomOf="@id/iv_poster" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_overview"
                app:layout_constraintTop_toBottomOf="@id/txt_overview"
                tools:text="Movies" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>